# MiniMD

./: README.md  index.html  package-lock.json  package.json
Example_md/: example.md
src/: App.jsx  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: Editor.jsx  Preview.jsx  Settings.jsx  TabBar.jsx  Toolbar.jsx
src/context/: AppContext.jsx
src/styles/: globals.css
