[package]
name = "minimal-md"
version = "0.1.0"
description = "MinimalMD - A minimal markdown editor"
authors = ["you"]
edition = "2021"

[lib]
name = "minimal_md_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
